--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,4 +1,5 @@
-body {
+body 
+{
   background-color: #fff;
   color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
@@ -6,47 +7,57 @@ body {
   line-height: 18px;
 }
 
-p, ol, ul, td {
+p, ol, ul, td 
+{
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
 }
 
-pre {
+pre
+{
   background-color: #eee;
   padding: 10px;
   font-size: 11px;
 }
 
-a {
+a 
+{
   color: #000;
-  &:visited {
+  &:visited 
+  {
     color: #666;
   }
-  &:hover {
+  &:hover 
+  {
     color: #fff;
     background-color: #000;
   }
 }
 
-div {
-  &.field, &.actions {
+div 
+{
+  &.field, &.actions 
+  {
     margin-bottom: 10px;
   }
 }
 
-#notice {
+#notice 
+{
   color: green;
 }
 
-.field_with_errors {
+.field_with_errors 
+{
   //padding: 2px;
   //background-color: red;
   color: red;
   display: table;
 }
 
-#error_explanation {
+#error_explanation 
+{
   width: 90%;
   border: 2px solid rgb(164, 173, 164);
   padding: 7px;
@@ -55,7 +66,8 @@ div {
   background-color: #f0f0f0;
   border-radius: 5px;
   box-shadow: 15px 15px 10px #888888;
-  h2 {
+  h2 
+  {
     color: black;
     background-color: white;
     text-align: left;
@@ -65,7 +77,8 @@ div {
     padding: 0px;
     padding-left: 15px;
   }
-  ul li {
+  ul li 
+  {
     font-size: 12px;
     list-style: square;
   }
