--- a/app/views/bikes/_current_selection.html.erb
+++ b/app/views/bikes/_current_selection.html.erb
@@ -1,85 +1,78 @@
-    <div class="current_selection">
-        <ul class="nav nav-list"> 
+<!--Indentation Complete-->
+<div class="current_selection">
+    <ul class="nav nav-list"> 
         <li><div class = "legen">Current Selection</div>  </li>
-
-            <% if @type_selection.nil? and @body_selection.nil? and @make_selection.nil? and @model_selection.nil? and @color_selection.nil? and @location_selection.nil? and @price_from_selection.nil? and @price_to_selection.nil? %>
+        <% if @type_selection.nil? and @body_selection.nil? and @make_selection.nil? and @model_selection.nil? and @color_selection.nil? and @location_selection.nil? and @price_from_selection.nil? and @price_to_selection.nil? %>
             <li>No options selected. Please choose one or more options below.
-                <%= link_to "New search", bikes_path%>
+            <%= link_to "New search", bikes_path%>
             </li>
-                <%end%>    
-            
-            <% if !@type_selection.nil?%>
-                <li>
-                    <div>
+        <%end%>    
+        <% if !@type_selection.nil?%>
+            <li>
+                <div>
                     <b> Type: </b></br>
-                <a href = "<%=bikes_path(sort: params[:sort], :direction => params[:direction], body: params[:body], make: params[:make], model: params[:model], color: params[:color],type: nil, price_from: params[:price_from], price_to: params[:price_to] )%>"><%= @type_selection %>   <div class = "icon-remove"></div></a>
-                    </div>
-                </li>
-            <%end%>
-
-            <% if !@body_selection.nil?%>
-                <li>
-                    <div>
+                    <a href = "<%=bikes_path(sort: params[:sort], :direction => params[:direction], body: params[:body], make: params[:make], model: params[:model], color: params[:color],type: nil, price_from: params[:price_from], price_to: params[:price_to] )%>"><%= @type_selection %>   <div class = "icon-remove"></div></a>
+                </div>
+            </li>
+        <%end%>
+        <% if !@body_selection.nil?%>
+            <li>
+                <div>
                     <b> Body: </b></br>
-                <a href = "<%=bikes_path(sort: params[:sort], :direction => params[:direction], body: nil, make: params[:make], model: params[:model], color: params[:color],type: params[:type], price_from: params[:price_from], price_to: params[:price_to] )%>"><%= @body_selection %>   <div class = "icon-remove"></div></a>
-                    </div>
-                </li>
-            <%end%>
-            <% if !@make_selection.nil?%>
-                <li>
-                    <div>
+                    <a href = "<%=bikes_path(sort: params[:sort], :direction => params[:direction], body: nil, make: params[:make], model: params[:model], color: params[:color],type: params[:type], price_from: params[:price_from], price_to: params[:price_to] )%>"><%= @body_selection %>   <div class = "icon-remove"></div></a>
+                </div>
+            </li>
+        <%end%>
+        <% if !@make_selection.nil?%>
+            <li>
+                <div>
                     <b>Make: </b></br>
-                <a href = "<%=bikes_path(sort: params[:sort], :direction => params[:direction], body: params[:body], make: nil, model: nil, color: params[:color],type: params[:type], price_from: params[:price_from], price_to: params[:price_to] )%>"><%= @make_selection %>   <div class = "icon-remove"></div></a>
-                    </div>
-                </li>
-            <%end%>
-            <% if !@model_selection.nil?%>
-                <li>
-                    <div>
+                    <a href = "<%=bikes_path(sort: params[:sort], :direction => params[:direction], body: params[:body], make: nil, model: nil, color: params[:color],type: params[:type], price_from: params[:price_from], price_to: params[:price_to] )%>"><%= @make_selection %>   <div class = "icon-remove"></div></a>
+                </div>
+            </li>
+        <%end%>
+        <% if !@model_selection.nil?%>
+            <li>
+                <div>
                     <b> Model: </b></br>
-                <a href = "<%=bikes_path(sort: params[:sort], :direction => params[:direction], body: params[:body], make: params[:make], model: nil, color: params[:color],type: params[:type], price_from: params[:price_from], price_to: params[:price_to] )%>"><%= @model_selection %>   <div class = "icon-remove"></div></a>
-                    </div>
-                </li>
-            <%end%>
-            <% if !@color_selection.nil?%>
-                <li>
-                <div>
-
-                <b> Colour: </b></br>
-                <a href = "<%=bikes_path(sort: params[:sort], :direction => params[:direction], body: params[:body], make: params[:make], model: params[:model], color: nil,type: params[:type], price_from: params[:price_from], price_to: params[:price_to] )%>"><%= @color_selection %>   <div class = "icon-remove"></div></a>
+                    <a href = "<%=bikes_path(sort: params[:sort], :direction => params[:direction], body: params[:body], make: params[:make], model: nil, color: params[:color],type: params[:type], price_from: params[:price_from], price_to: params[:price_to] )%>"><%= @model_selection %>   <div class = "icon-remove"></div></a>
                 </div>
-                </li>
-            <%end%>
-            <% if !@location_selection.nil?%>
-                <li>
+            </li>
+        <%end%>
+        <% if !@color_selection.nil?%>
+            <li>
                 <div>
-                <b>Location: </b></br>
-                <a href = "<%=bikes_path(sort: params[:sort], :direction => params[:direction], body: params[:body], make: params[:make], model: params[:model], color: params[:color],type: params[:type], location:nil, price_from: params[:price_from], price_to: params[:price_to] )%>"><%= @location_selection %>   <div class = "icon-remove"></div></a>
+                    <b> Colour: </b></br>
+                    <a href = "<%=bikes_path(sort: params[:sort], :direction => params[:direction], body: params[:body], make: params[:make], model: params[:model], color: nil,type: params[:type], price_from: params[:price_from], price_to: params[:price_to] )%>"><%= @color_selection %>   <div class = "icon-remove"></div></a>
                 </div>
-                </li>
-            <%end%>
-            <% if !@price_from_selection.nil? or !@price_to_selection.nil?%>
-                
-                <li>
-
+            </li>
+        <%end%>
+        <% if !@location_selection.nil?%>
+            <li>
+                <div>
+                    <b>Location: </b></br>
+                    <a href = "<%=bikes_path(sort: params[:sort], :direction => params[:direction], body: params[:body], make: params[:make], model: params[:model], color: params[:color],type: params[:type], location:nil, price_from: params[:price_from], price_to: params[:price_to] )%>"><%= @location_selection %>   <div class = "icon-remove"></div></a>
+                </div>
+            </li>
+        <%end%>
+        <% if !@price_from_selection.nil? or !@price_to_selection.nil?%>
+            <li>
                 <div>
                     <a href = "<%=bikes_path(price_from: nil, price_to: nil,sort: params[:sort], :direction => params[:direction], type: params[:type],body: params[:body], make: params[:make], model: params[:model], color: params[:color], location: params[:location])%>"><b>Price:</b></br> 
                         <% if !@price_from_selection.nil?%>
                             Rs. <%= @price_from_selection.to_i+1 %> - 
                         <% else %>
-                        Min. - 
+                            Min. - 
                         <%end%>
                         <% if !@price_to_selection.nil?%>
                             Rs. <%= @price_to_selection.to_i-1 %>   
                         <% else %>
-                        Max.
-                        
+                            Max.
                         <%end%>
                         <div class = "icon-remove"></div>
                     </a>
                 </div>
-                </li>
-            <%end%>
-        </ul>
-    </div>
-    
+            </li>
+        <%end%>
+    </ul>
+</div>
