--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,192 +1,155 @@
-  <!DOCTYPE html>
-  <html lang="en">
-    <head>
-  
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="msvalidate.01" content="510ACF7858C360DAA9E4A9B854ADD66E" />
-
-      <meta name="google-site-verification" content="32_zx750zT1Sza8yRMpdrHe4P8pPJRlW-DWrO0R1rkA" />
-      <title><%= content_for?(:title) ? yield(:title) : "Bikesales" %></title>
-      <%= csrf_meta_tags %>
-      <%= javascript_include_tag "jquery.min" %>
-      <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
-      <!--[if lt IE 9]>
-        <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
-      <![endif]-->
-
-      <%= stylesheet_link_tag "application", :media => "all" %>
-      <script type="text/javascript">
+<!--Indentation Complete-->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="msvalidate.01" content="510ACF7858C360DAA9E4A9B854ADD66E" />
+    <meta name="google-site-verification" content="32_zx750zT1Sza8yRMpdrHe4P8pPJRlW-DWrO0R1rkA" />
+    <title><%= content_for?(:title) ? yield(:title) : "Bikesales" %></title>
+    <%= csrf_meta_tags %>
+    <%= javascript_include_tag "jquery.min" %>
+    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+    <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
+    <![endif]-->
+    <%= stylesheet_link_tag "application", :media => "all" %>
+    <script type="text/javascript">
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-41955848-1', 'bechnu.com');
+      ga('send', 'pageview');
+    </script>
 
-    ga('create', 'UA-41955848-1', 'bechnu.com');
-    ga('send', 'pageview');
-</script>
+    <%=favicon_link_tag 'favicon.ico'%>
+    <link href="images/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="images/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72">
+    <link href="images/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114">
+  </head>
 
-      <%=favicon_link_tag 'favicon.ico'%>
-      <link href="images/apple-touch-icon.png" rel="apple-touch-icon">
-      <link href="images/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72">
-      <link href="images/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114">
-    </head>
-    <body>
-
-      <div class="navbar navbar-fixed-top">
-        <div class="navbar-inner">
-          <div class="container-fluid">
-            
-            <ul class = "nav pull-right">  
-                <% if user_signed_in?%>
-                            <li>
-                             <div class="btn-group">
-                              <a class="btn btn-primary dropdown-toggle" id = "icon_button" data-toggle="dropdown" href="#">
-                                <div class="icon-user icon-white"></div> 
-                                 <span id ="username"> 
-                                <%=current_user.name%> 
-                                </span>
-                                
-                                
-                              </a>
-                              <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-                                <span class="caret"></span>
-                              </button>
-                              <ul class="dropdown-menu">
-                                <!-- dropdown menu links -->
-                                <li><a href="<%=profile_user_path(current_user)%>" ><div class= "icon-asterisk"></div> Profile </a></li>
-                                <li><a href="<%= edit_user_registration_path(@user)%>"><div class= "icon-edit"></div> Edit</a></li>
-                                <li class="divider"></li>
-                                <li><%= link_to "Sign Out", destroy_user_session_path, method: "delete"  %>
-                         
-                                </li>
-                              </ul>
-                            </div>
-                            </li>
-                          
-                            
-                
-                <%else%>
-                <li>
-                  <div class="btn-group">
+  <body>
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container-fluid">
+          <ul class = "nav pull-right">  
+            <% if user_signed_in?%>
+              <li>
+                <div class="btn-group">
+                  <a class="btn btn-primary dropdown-toggle" id = "icon_button" data-toggle="dropdown" href="#">
+                    <div class="icon-user icon-white"></div> 
+                    <span id ="username"> 
+                      <%=current_user.name%> 
+                    </span>
+                  </a>
+                  <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                    <span class="caret"></span>
+                  </button>
+                  <ul class="dropdown-menu">
+                    <!-- dropdown menu links -->
+                    <li><a href="<%=profile_user_path(current_user)%>"><div class= "icon-asterisk"></div> Profile </a></li>
+                    <li><a href="<%= edit_user_registration_path(@user)%>"><div class= "icon-edit"></div> Edit</a></li>
+                    <li class="divider"></li>
+                    <li><%= link_to "Sign Out", destroy_user_session_path, method: "delete"  %></li>
+                  </ul>
+                </div>
+              </li>
+            <%else%>
+              <li>
+                <div class="btn-group">
                   <a href="#myModal" class= "btn btn-primary dropdown-toggle" data-toggle="modal">Sign in</a>
-                  </div>
-                </li>
-                <%end%>
-                <li>
-                <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse" id= "toggle">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </a></li>
-              </ul>
-            <a class="brand" href="/">Bikes.Bechnu</a>
-            <div class="container-fluid nav-collapse">
-              <ul class="nav">
-                <li><%= link_to "Bikes For Sale", bikes_path%></li>
-
-                <li><%= link_to "Sell your Bike", new_bike_path  %></li>
-                <li><%= link_to "New Bike Showroom", showroom_bike_specs_path  %></li>
-                
-              </ul>
-            </div>
-              
-            <!--/.nav-collapse -->
+                </div>
+              </li>
+            <%end%>
+            <li>
+              <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse" id= "toggle">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </a>
+            </li>
+          </ul>
+          <a class="brand" href="/">Bikes.Bechnu</a>
+          <div class="container-fluid nav-collapse">
+            <ul class="nav">
+              <li><%= link_to "Bikes For Sale", bikes_path%></li>
+              <li><%= link_to "Sell your Bike", new_bike_path  %></li>
+              <li><%= link_to "New Bike Showroom", showroom_bike_specs_path  %></li>
+            </ul>
           </div>
+            <!--/.nav-collapse -->
         </div>
       </div>
-        <div id="main_page_header">
-            <%= render "shared/logo"%>
+    </div>
+    <div id="main_page_header">
+      <%= render "shared/logo"%>
+    </div>
+    <div class="container-fluid">
+      <div class="row-fluid">
+        <div class="span12">
+          <%= yield %>
         </div>
-      <div class="container-fluid">
-
-        <div class="row-fluid">
-          <div class="span12">
-            <%= yield %>
-          </div>
-        </div><!--/row-->
-
-        
-
-      </div> <!-- /container -->
-      <!-- Modal -->
-      <div id="myModal" class="modal hide" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-          <h3 id="myModalLabel">Sign In</h3>
-        </div>
-        <div class="modal-body"><div class= "modal_body">
+      </div><!--/row-->
+    </div> <!-- /container -->
+    <!-- Modal -->
+    <div id="myModal" class="modal hide" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <h3 id="myModalLabel">Sign In</h3>
+      </div>
+      <div class="modal-body">
+        <div class= "modal_body">
           <a href = "<%=user_omniauth_authorize_path(:facebook)%>" id= "facebook-signin"> 
             <div class = "facebook_login">
               Sign In with Facebook
             </div>
           </a>
-
           <%= link_to "I dont have a facebook account. Sign up with email", new_user_session_path %>
-          </div>
-          </div>
-          <div class="modal-footer">
-          
-          <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-       
         </div>
       </div>
-      
-      <!-- Javascripts
-      ================================================== -->
-      <!-- Placed at the end of the document so the pages load faster -->
-      
-     
-
-
-      <%= javascript_include_tag "application" %>
-      <%= javascript_include_tag "facebook" %>
-
-      <script  data-cfasync="false" type="text/javascript">
-            $(window).resize(function() {
-
-                if ($(window).width() <= 979 && $(window).width() >=600){
-                    setTimeout(function() {
-                        $("#toggle").trigger('click');
-                    },1);}
-
-                     
-              });
-          if ($(window).width() <= 979 && $(window).width() >=600){
-              setTimeout(function() {
-                  $("#toggle").trigger('click');
-              },1);}
-
-             var width= $(window).width()/5
-              
-                $("div.logo").animate({
-            
-            textIndent: width,
-
-            
-          }, 3600 );
-      </script>    
-
-      <div class="navbar navbar-fixed-bottom">
-        <div class="navbar-inner">
-          
-            <div class="container-fluid">
-              <ul class="nav" id = "footer">
-                <li> <a href="<%=terms_and_conditions_path%>"> Terms and Conditions </a></li>
-                <li> <a href="<%=about_us_path%>"> Our Team </a></li>
-                <li> <a href="<%=contacts_path%>"> Contact Us </a></li>
-                <li><a href="<%=how_it_works_path%>">How it works</a></li>
-              </ul>
-              <ul class = "nav pull-right" id = "footer_copyright">  
-                <li><p>&copy; Bechnu.com 2013 "Because we can!"</p></li>
-                <li></li>
-              </ul>
-            </div><!--/.nav-collapse -->
-        </div>
+      <div class="modal-footer">
+        <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
       </div>
-      
-    
+    </div>
+    <!-- Javascripts
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+     <%= javascript_include_tag "application" %>
+     <%= javascript_include_tag "facebook" %>
+    <script  data-cfasync="false" type="text/javascript">
+      $(window).resize(function() {
+      if ($(window).width() <= 979 && $(window).width() >=600){
+        setTimeout(function() {
+          $("#toggle").trigger('click');
+        },1);}
+      });
+      if ($(window).width() <= 979 && $(window).width() >=600){
+        setTimeout(function() {
+          $("#toggle").trigger('click');
+        },1);
+      }
+      var width= $(window).width()/5
+      $("div.logo").animate({
+        textIndent: width,
+      }, 3600 );
+    </script>    
 
-
-    </body>
-  </html>
+    <div class="navbar navbar-fixed-bottom">
+      <div class="navbar-inner">
+        <div class="container-fluid">
+          <ul class="nav" id = "footer">
+            <li> <a href="<%=terms_and_conditions_path%>"> Terms and Conditions </a></li>
+            <li> <a href="<%=about_us_path%>"> Our Team </a></li>
+            <li> <a href="<%=contacts_path%>"> Contact Us </a></li>
+            <li><a href="<%=how_it_works_path%>">How it works</a></li>
+          </ul>
+          <ul class = "nav pull-right" id = "footer_copyright">  
+            <li><p>&copy; Bechnu.com 2013 "Because we can!"</p></li>
+            <li></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
+  </body>
+</html>
